--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
   <section id="title">
-    <div class="container-fluid">
+    <div class="container-fluid container-fluid-mobile">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -91,26 +91,26 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
 
     <div class="row">
 
       <div class="feature-item col-lg-4">
-        <i class="fas fa-check-circle fa-3x"></i>
+        <i class="fas fa-check-circle fa-4x"></i>
         <h3>Easy to use</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
       <div class="feature-item col-lg-4">
-        <i class="fas fa-bullseye fa-3x"></i>
+        <i class="fas fa-bullseye fa-4x"></i>
         <h3>Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
 
       <div class="feature-item col-lg-4">
-        <i class="fas fa-heart fa-3x"></i>
+        <i class="fas fa-heart fa-4x"></i>
         <h3>Guaranteed to work</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
